--- a/p8105_hw1_NL2836.md
+++ b/p8105_hw1_NL2836.md
@@ -5,20 +5,32 @@ Ngan Le
 
 # Problem 1
 
-First, we load the moderndive library.
+First, we load the necessary libraries.
 
 ``` r
 library(moderndive)
+library(tidyverse)
 ```
+
+    ## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
+    ## ✔ dplyr     1.1.2     ✔ readr     2.1.4
+    ## ✔ forcats   1.0.0     ✔ stringr   1.5.0
+    ## ✔ ggplot2   3.4.2     ✔ tibble    3.2.1
+    ## ✔ lubridate 1.9.2     ✔ tidyr     1.3.0
+    ## ✔ purrr     1.0.1     
+    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
+    ## ✖ dplyr::filter() masks stats::filter()
+    ## ✖ dplyr::lag()    masks stats::lag()
+    ## ℹ Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors
 
 This code chunk below downloads the dataset and views it.
 
 ``` r
 data("early_january_weather")
-View(early_january_weather)
+view(early_january_weather)
 ```
 
-### Dataset short description:
+## a) Dataset short description
 
 - This dataset includes information about the weather in early January
   of EWR in 2013.
@@ -29,3 +41,27 @@ View(early_january_weather)
   `time_hour`. There are 358 rows, or 358 observations.
 
 - The mean temperature is 39.6.
+
+## b) Scatterplots
+
+- This code chunk makes a scatterplot of `temp` (y) vs `time_hour` (x)
+  with color points using the `humid` variable.
+
+``` r
+scatterplot_jan <- ggplot(early_january_weather, aes(x = time_hour, y = temp, color = humid)) + geom_point()
+```
+
+### Describe plot pattern
+
+- In EWR, the temperature (y axis) fluctuates between around 24F to
+  around 58F during the first 15 days (x axis) of January in 2013. The
+  humidity (color of the points) fluctuates from 30% to 100%. The 14th
+  was the warmest day with high humidity.
+
+### Export scatterplot
+
+This code chunk export the scatterplot to the project directory.
+
+``` r
+ggsave("scatterplot_jan.png", width = 5, height = 5, dpi = 300)
+```
