--- a/p8105_hw1_NL2836.md
+++ b/p8105_hw1_NL2836.md
@@ -12,17 +12,6 @@ library(moderndive)
 library(tidyverse)
 ```
 
-    ## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
-    ## ✔ dplyr     1.1.2     ✔ readr     2.1.4
-    ## ✔ forcats   1.0.0     ✔ stringr   1.5.0
-    ## ✔ ggplot2   3.4.2     ✔ tibble    3.2.1
-    ## ✔ lubridate 1.9.2     ✔ tidyr     1.3.0
-    ## ✔ purrr     1.0.1     
-    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-    ## ✖ dplyr::filter() masks stats::filter()
-    ## ✖ dplyr::lag()    masks stats::lag()
-    ## ℹ Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors
-
 This code chunk below downloads the dataset and views it.
 
 ``` r
@@ -35,7 +24,7 @@ view(early_january_weather)
 - This dataset includes information about the weather in early January
   of EWR in 2013.
 
-- The dataframe has 15 columns (i.e., variables), including `origin`,
+- The dataset has 15 columns (i.e., variables), including `origin`,
   `year`, `month`, `day`, `hour`, `temp`, `dewp`, `humid`, `wind_dir`,
   `wind_speed`, `wind_gust`, `precip`, `pressure`, `visistb`, and
   `time_hour`. There are 358 rows, or 358 observations.
@@ -45,11 +34,14 @@ view(early_january_weather)
 ## b) Scatterplots
 
 - This code chunk makes a scatterplot of `temp` (y) vs `time_hour` (x)
-  with color points using the `humid` variable.
+  with color points using the `humid` variable and print the plot.
 
 ``` r
 scatterplot_jan <- ggplot(early_january_weather, aes(x = time_hour, y = temp, color = humid)) + geom_point()
+print(scatterplot_jan)
 ```
+
+![](p8105_hw1_NL2836_files/figure-gfm/scatterplot%20temp/time_hour-1.png)<!-- -->
 
 ### Describe plot pattern
 
@@ -65,3 +57,113 @@ This code chunk export the scatterplot to the project directory.
 ``` r
 ggsave("scatterplot_jan.png", width = 5, height = 5, dpi = 300)
 ```
+
+# Problem 2
+
+## Create a dataframe with:
+
+- Random sample of size 10, standard Normal Distribution.
+- Logical vector to indicate whether elements of the sample \> 0.
+- A character vector of length 10.
+- A factor vector of length 10, with 3 different factor “levels”.
+
+This code chunk creates the dataframe accordingly and view it.
+
+``` r
+random_df = tibble(
+  sample = rnorm(10, mean = 0, sd = 1),
+  log_vec = sample > 0,
+  char_vec = c("a","b","c","d","e","f","g","h","i","j"),
+  fac_vec = factor(
+    sample(c("Group 1", "Level 2", "Level 3"), size = 10, replace = TRUE),
+)
+)
+
+view(random_df)
+```
+
+## Take the mean of the variables
+
+First take the mean of the variable `sample` in the dataframe and print
+it.
+
+``` r
+mean(random_df$sample)
+```
+
+    ## [1] -0.2400385
+
+Next take the mean of the logical vector `log_vec` in the dataframe and
+print it.
+
+``` r
+mean(random_df$log_vec)
+```
+
+    ## [1] 0.3
+
+Next take the mean of the character vector `char_vec` in the dataframe
+and print it.
+
+``` r
+mean(random_df$char_vec)
+```
+
+    ## Warning in mean.default(random_df$char_vec): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+Next take the mean of the factor vector `fac_vec` in the dataframe and
+print it.
+
+``` r
+mean(random_df$fac_vec)
+```
+
+    ## Warning in mean.default(random_df$fac_vec): argument is not numeric or logical:
+    ## returning NA
+
+    ## [1] NA
+
+### Description
+
+- Only the mean of the `sample` and the `log_vec` variables can be
+  determined.
+- The mean of the `fac_vec` and `log_vec` cannot be determined since
+  they are not numerical values.
+
+## Convert the variables with `as.numeric`
+
+`eval = FALSE` is used to specify no output of the code chunks when
+render the document.
+
+### Convert `log_vec`
+
+``` r
+as.numeric(random_df$log_vec)
+```
+
+Here the `FALSE` values are converted into 0 and the `TRUE`values are
+converted into 1.
+
+### Convert `char_vec`
+
+``` r
+as.numeric(random_df$char_vec)
+```
+
+Here the output is converted to `NA` (i.e., non applicable) because of
+coercion. This is because there is no numeric value assigned for any
+character value.
+
+### Convert `fac_vec`
+
+``` r
+as.numeric(random_df$fac_vec)
+```
+
+Here the `fac_vec` values are converted into numerical values according
+to their “levels”. This is because factor vector are categorical data,
+and R determines the “levels” automatically based on the unique value of
+the factor vector.
