Draft 1 of submission.

--- a/p8105_hw1_NL2836.md
+++ b/p8105_hw1_NL2836.md
@@ -91,7 +91,7 @@ it.
 mean(random_df$sample)
 ```
 
-    ## [1] -0.2400385
+    ## [1] -0.4712014
 
 Next take the mean of the logical vector `log_vec` in the dataframe and
 print it.
@@ -100,7 +100,7 @@ print it.
 mean(random_df$log_vec)
 ```
 
-    ## [1] 0.3
+    ## [1] 0.4
 
 Next take the mean of the character vector `char_vec` in the dataframe
 and print it.
@@ -136,7 +136,7 @@ mean(random_df$fac_vec)
 ## Convert the variables with `as.numeric`
 
 `eval = FALSE` is used to specify no output of the code chunks when
-render the document.
+rendering the document.
 
 ### Convert `log_vec`
 
