--- a/p8105_hw1_NL2836.Rmd
+++ b/p8105_hw1_NL2836.Rmd
@@ -129,7 +129,7 @@ Here the output is converted to `NA` (i.e., non applicable) because of coercion.
 as.numeric(random_df$fac_vec)
 ```
 
-Here the `fac_vec` values are converted into numerical values according to their "levels". This is because factor vector are categorical data, and R determines the "levels" automatically based on the unique value of the factor vector. 
+Here the `fac_vec` values are converted into numerical values according to their "levels". This is because factor vector are categorical data, and R determines the "levels" automatically based on the unique value of the factor vector. `Group A` is converted to 1, `Group B` is converted to 2, and `Group C` is converted to 3.
 
 
 
