--- a/p8105_hw1_NL2836.md
+++ b/p8105_hw1_NL2836.md
@@ -91,7 +91,7 @@ it.
 mean(random_df$sample)
 ```
 
-    ## [1] -0.4712014
+    ## [1] -0.2373188
 
 Next take the mean of the logical vector `log_vec` in the dataframe and
 print it.
@@ -100,7 +100,7 @@ print it.
 mean(random_df$log_vec)
 ```
 
-    ## [1] 0.4
+    ## [1] 0.2
 
 Next take the mean of the character vector `char_vec` in the dataframe
 and print it.
@@ -166,4 +166,5 @@ as.numeric(random_df$fac_vec)
 Here the `fac_vec` values are converted into numerical values according
 to their “levels”. This is because factor vector are categorical data,
 and R determines the “levels” automatically based on the unique value of
-the factor vector.
+the factor vector. `Group A` is converted to 1, `Group B` is converted
+to 2, and `Group C` is converted to 3.
