--- a/p8105_hw1_NL2836.md
+++ b/p8105_hw1_NL2836.md
@@ -52,7 +52,7 @@ print(scatterplot_jan)
 
 ### Export scatterplot
 
-This code chunk export the scatterplot to the project directory.
+This code chunk exports the scatterplot to the project directory.
 
 ``` r
 ggsave("scatterplot_jan.png", width = 5, height = 5, dpi = 300)
@@ -60,14 +60,14 @@ ggsave("scatterplot_jan.png", width = 5, height = 5, dpi = 300)
 
 # Problem 2
 
-## Create a dataframe with:
+## a) Create a dataframe with:
 
 - Random sample of size 10, standard Normal Distribution.
 - Logical vector to indicate whether elements of the sample \> 0.
 - A character vector of length 10.
 - A factor vector of length 10, with 3 different factor “levels”.
 
-This code chunk creates the dataframe accordingly and view it.
+This code chunk creates the dataframe accordingly and views it.
 
 ``` r
 random_df = tibble(
@@ -82,7 +82,7 @@ random_df = tibble(
 view(random_df)
 ```
 
-## Take the mean of the variables
+## b) Take the mean of the variables
 
 First take the mean of the variable `sample` in the dataframe and print
 it.
@@ -91,16 +91,16 @@ it.
 mean(random_df$sample)
 ```
 
-    ## [1] -0.2373188
+    ## [1] -0.2912023
 
 Next take the mean of the logical vector `log_vec` in the dataframe and
-print it.
+prints it.
 
 ``` r
 mean(random_df$log_vec)
 ```
 
-    ## [1] 0.2
+    ## [1] 0.5
 
 Next take the mean of the character vector `char_vec` in the dataframe
 and print it.
@@ -133,12 +133,12 @@ mean(random_df$fac_vec)
 - The mean of the `fac_vec` and `log_vec` cannot be determined since
   they are not numerical values.
 
-## Convert the variables with `as.numeric`
+## c) Convert the variables with `as.numeric`
 
 `eval = FALSE` is used to specify no output of the code chunks when
 rendering the document.
 
-### Convert `log_vec`
+### Convert logic vector
 
 ``` r
 as.numeric(random_df$log_vec)
@@ -147,7 +147,7 @@ as.numeric(random_df$log_vec)
 Here the `FALSE` values are converted into 0 and the `TRUE`values are
 converted into 1.
 
-### Convert `char_vec`
+### Convert character vector
 
 ``` r
 as.numeric(random_df$char_vec)
@@ -157,7 +157,7 @@ Here the output is converted to `NA` (i.e., non applicable) because of
 coercion. This is because there is no numeric value assigned for any
 character value.
 
-### Convert `fac_vec`
+### Convert factor vector
 
 ``` r
 as.numeric(random_df$fac_vec)
