--- a/p8105_hw1_NL2836.Rmd
+++ b/p8105_hw1_NL2836.Rmd
@@ -66,7 +66,7 @@ random_df = tibble(
   log_vec = sample > 0,
   char_vec = c("a","b","c","d","e","f","g","h","i","j"),
   fac_vec = factor(
-    sample(c("Group 1", "Level 2", "Level 3"), size = 10, replace = TRUE),
+    sample(c("Group 1", "Group 2", "Group 3"), size = 10, replace = TRUE),
 )
 )
 
