--- a/p8105_hw1_NL2836.md
+++ b/p8105_hw1_NL2836.md
@@ -33,8 +33,8 @@ view(early_january_weather)
 
 ## b) Scatterplots
 
-- This code chunk makes a scatterplot of `temp` (y) vs `time_hour` (x)
-  with color points using the `humid` variable and print the plot.
+This code chunk makes a scatterplot of `temp` (y) vs `time_hour` (x)
+with color points using the `humid` variable and print the plot.
 
 ``` r
 scatterplot_jan <- ggplot(early_january_weather, aes(x = time_hour, y = temp, color = humid)) + geom_point()
@@ -75,7 +75,7 @@ random_df = tibble(
   log_vec = sample > 0,
   char_vec = c("a","b","c","d","e","f","g","h","i","j"),
   fac_vec = factor(
-    sample(c("Group 1", "Level 2", "Level 3"), size = 10, replace = TRUE),
+    sample(c("Group 1", "Group 2", "Group 3"), size = 10, replace = TRUE),
 )
 )
 
@@ -91,7 +91,7 @@ it.
 mean(random_df$sample)
 ```
 
-    ## [1] -0.2912023
+    ## [1] -0.1486608
 
 Next take the mean of the logical vector `log_vec` in the dataframe and
 prints it.
@@ -100,7 +100,7 @@ prints it.
 mean(random_df$log_vec)
 ```
 
-    ## [1] 0.5
+    ## [1] 0.3
 
 Next take the mean of the character vector `char_vec` in the dataframe
 and print it.
@@ -126,12 +126,11 @@ mean(random_df$fac_vec)
 
     ## [1] NA
 
-### Description
+### Comments
 
 - Only the mean of the `sample` and the `log_vec` variables can be
   determined.
-- The mean of the `fac_vec` and `log_vec` cannot be determined since
-  they are not numerical values.
+- The mean of the `fac_vec` and `log_vec` cannot be determined.
 
 ## c) Convert the variables with `as.numeric`
 
@@ -168,3 +167,12 @@ to their “levels”. This is because factor vector are categorical data,
 and R determines the “levels” automatically based on the unique value of
 the factor vector. `Group A` is converted to 1, `Group B` is converted
 to 2, and `Group C` is converted to 3.
+
+### Comments
+
+This further explains why the mean of the factor vector `fac_vec` could
+not be determined, as this is a categorical variable rather than
+continuous (like `sample`) or binary (like `log_vec`) variable.
+Additionally, the mean of the character vector `char_vec` could not be
+determined as well, since there is no numerical values assigned for
+characters.
