--- a/p8105_hw1_NL2836.md
+++ b/p8105_hw1_NL2836.md
@@ -75,7 +75,7 @@ random_df = tibble(
   log_vec = sample > 0,
   char_vec = c("a","b","c","d","e","f","g","h","i","j"),
   fac_vec = factor(
-    sample(c("Group 1", "Group 2", "Group 3"), size = 10, replace = TRUE),
+    sample(c("Low", "Medium", "High"), size = 10, replace = TRUE),
 )
 )
 
@@ -91,7 +91,7 @@ it.
 mean(random_df$sample)
 ```
 
-    ## [1] -0.1486608
+    ## [1] -0.07292928
 
 Next take the mean of the logical vector `log_vec` in the dataframe and
 prints it.
@@ -100,7 +100,7 @@ prints it.
 mean(random_df$log_vec)
 ```
 
-    ## [1] 0.3
+    ## [1] 0.4
 
 Next take the mean of the character vector `char_vec` in the dataframe
 and print it.
@@ -165,8 +165,8 @@ as.numeric(random_df$fac_vec)
 Here the `fac_vec` values are converted into numerical values according
 to their “levels”. This is because factor vector are categorical data,
 and R determines the “levels” automatically based on the unique value of
-the factor vector. `Group A` is converted to 1, `Group B` is converted
-to 2, and `Group C` is converted to 3.
+the factor vector. `Low` is converted to 2, `Medium` is converted to 3,
+and `High` is converted to 1.
 
 ### Comments
 
